# pg_wasm

./: .gitignore  AGENTS.md  Cargo.toml  README.md
pg_wasm/: .gitignore  Cargo.toml  build.rs  pg_wasm.control
pg_wasm/fixtures/: marshal_matrix.component.wasm  marshal_matrix.wit  test_add.component.wasm  test_add.component.wat  test_spin.wat
pg_wasm/fixtures/components/: README.md  generate_pg_regress_sql.py
pg_wasm/fixtures/components/arith/: Cargo.toml
pg_wasm/fixtures/components/enums/: Cargo.toml
pg_wasm/fixtures/components/hooks/: Cargo.toml
pg_wasm/fixtures/components/policy_probe/: Cargo.toml
pg_wasm/fixtures/components/records/: Cargo.toml
pg_wasm/fixtures/components/resources/: Cargo.toml
pg_wasm/fixtures/components/strings/: Cargo.toml
pg_wasm/fixtures/components/trap/: Cargo.toml
pg_wasm/fixtures/components/variants/: Cargo.toml
pg_wasm/fixtures/components/wit_roundtrip/: Cargo.toml  README.md
pg_wasm/fixtures/marshal_matrix_component/: Cargo.toml
pg_wasm/fixtures/marshal_matrix_component/src/: bindings.rs  lib.rs
pg_wasm/sql/: pg_wasm--0.1.0--0.1.1.sql  pg_wasm--0.1.0.sql
pg_wasm/src/: abi.rs  artifacts.rs  catalog.rs  composite_layout.rs  config.rs  errors.rs  guc.rs  hooks.rs  lib.rs  lifecycle.rs  load.rs  mapping.rs  metrics.rs  policy.rs  proc_reg.rs  registry.rs  runtime.rs  shmem.rs  track_b_component_types.rs  trampoline.rs  views.rs  wit.rs
pg_wasm/src/lifecycle/: load.rs  unload.rs
pg_wasm/src/runtime/: component.rs  component_marshal.rs  composite_marshal.rs  dispatch.rs  mod.rs  pool.rs  selection.rs  stub.rs  wasm_bytes_exports.rs  wasmer_backend.rs  wasmtime_backend.rs
pg_wasm/tests/pg_regress/expected/: error_classes.out  errors.out  lifecycle.out  load.out  metrics.out  policy_narrow.out  wit_mapping.out
pg_wasm/tests/pg_regress/sql/: error_classes.sql  lifecycle.sql  metrics.sql  policy_narrow.sql  (+2 more)
tests/: Cargo.toml  README.md  build.rs
tests/fixtures/: core.wat  itest.wit
tests/http_search_guest/: Cargo.toml
tests/src/: backend_restart.rs  concurrent_generation.rs  fuel_exhaustion.rs  lib.rs  memory_pages.rs  query_cancellation.rs  wasi_policy_denial.rs
tests/src/common/: mod.rs
(+66 files in other folders)
