[package]
name = "tests"
edition.workspace = true
version.workspace = true
authors.workspace = true
publish = false
build = "build.rs"

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
url.workspace = true
